@@ -1,5 +1,7 @@
 Revision history for Perl extension Catalyst::Plugin::Authentication
 
+    - Change all classes to Moose and MooseX::Emulate::Class::Accessor::Fast,
+      fixing undeclared dependency on Class::Accessor::Fast.
     - Change Catalyst::Authentication::Realm to use String::RewritePrefix
       rather than doing namespace mangling manually.
     - Fix whitespace and tabs, add Test::EOL and Test::NoTabs
